# compPhys2_p2

./: .gitignore
program/: CMakeLists.txt
program/Hamiltonian/: Hamiltonian.h  HarmonicOscillator.cpp  HarmonicOscillator.h
program/InitialState/: InitialState.h  RandomUniform.cpp
program/Sampler/: Sampler.cpp  Timer.h
program/System/: OPTIMIZE.cpp  Particle.cpp  Particle.h  System.cpp  System.h
program/WaveFunction/: TrialSlater.cpp  TrialSlater.h  TrialSlaterWaveFunction.cpp  TrialSlaterWaveFunction.h  TrialWaveFunction.cpp  TrialWaveFunction.h  WaveFunction.cpp  WaveFunction.h
program/main/: main.cpp
report/: appendix.tex  report.aux  report.tex  report.toc
report/calculations/: out  out1  ratt.tex  twoParticleFunction.py
sympy/: hermites.py
